account/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: backendd/dita.account:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 0m
              memory: 0Mi
